--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DB_PORT=5432
 DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=saaskit
+
+TOKEN_SIGNING_KEY_PATH=./test/data/jwtRS256.key
+TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
