setup events service & multiplex env vars

--- a/pkg/event/sqlboiler.toml
+++ b/pkg/event/sqlboiler.toml
@@ -11,6 +11,6 @@ add-global-variants = true
   port   = 5433
   user   = "admin"
   pass   = "admin"
-  schema = "auth"
+  schema = "event"
   sslmode = "disable"
   blacklist = ["schema_migrations"]
