--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=saaskit
 
-AUTH_SERVICE_PORT=8080
+HTTP_PORT=8080
 
 TOKEN_SIGNING_KEY_PATH=./test/data/jwtRS256.key
 TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
