prepare services to run concurrently
within separate go routines, loading shared and their specific env vars

--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=saaskit
 
-HTTP_PORT=8080
+WEBBFF_SERVICE_PORT=8800
+AUTH_SERVICE_PORT=8801
+EVENT_SERVICE_PORT=8802
 
 TOKEN_SIGNING_KEY_PATH=./test/data/jwtRS256.key
 TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
