--- a/.env
+++ b/.env
@@ -4,8 +4,11 @@ DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=saaskit
 
+WEBBFF_SERVICE_HOST=
 WEBBFF_SERVICE_PORT=8800
+AUTH_SERVICE_HOST=
 AUTH_SERVICE_PORT=8801
+EVENT_SERVICE_HOST=
 EVENT_SERVICE_PORT=8802
 
 TOKEN_SIGNING_KEY_PATH=./test/data/jwtRS256.key
