implement create workshop

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ EVENT_SERVICE_PORT=8802
 
 TOKEN_SIGNING_KEY_PATH=./test/data/jwtRS256.key
 TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
+
+TOKEN_ISSUER=auth
