--- a/.env
+++ b/.env
@@ -15,3 +15,5 @@ TOKEN_SIGNING_KEY_PATH=./test/data/jwtRS256.key
 TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
 
 TOKEN_ISSUER=auth
+
+ALLOW_ORIGINS=localhost,saas-kit.smartnuance.com
