--- a/.env
+++ b/.env
@@ -16,4 +16,4 @@ TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
 
 TOKEN_ISSUER=auth
 
-ALLOW_ORIGINS=localhost,saas-kit.smartnuance.com
+ALLOW_ORIGINS=localhost,admin-kit.smartnuance.com
