--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -35,8 +35,8 @@ omit_slice_element_pointers: true
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
-autobind:
-  - "github.com/smartnuance/saas-kit/pkg/graph/models"
+# autobind:
+#   - "github.com/smartnuance/saas-kit/pkg/graph/models"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
