--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    environment: prod
     permissions:
       packages: write
       contents: read
@@ -14,10 +15,23 @@ jobs:
       - uses: earthly/actions/setup-earthly@v1
         with:
           version: v0.6.15
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Log in to container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: what earthly version is installed?
         run: earthly --version
       - name: run the earthly build & deploy for all services as one binary
         run: earthly --push --build-arg service=dev +publish
+  deploy:
+    runs-on: ubuntu-latest
+    environment: prod
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - name: Unlock secret directory
+        uses: sliteteam/github-action-git-crypt-unlock@1.2.0
+        env:
+          GIT_CRYPT_KEY: ${{ secrets.GIT_CRYPT_KEY }}
+      # TODO add k8s apply steps to deploy
