--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5435
 DB_USER=admin
 DB_PASSWORD=admin
 DB_NAME=saaskit
@@ -16,4 +16,4 @@ TOKEN_VALIDATION_KEY_PATH=./test/data/jwtRS256.key.pub
 
 TOKEN_ISSUER=auth
 
-ALLOW_ORIGINS=localhost,admin-kit.smartnuance.com
+ALLOW_ORIGINS=localhost
